--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
-/**
- * Updated by trungquandev.com's author on August 17 2023
- * YouTube: https://youtube.com/@trungquandev
- * "A bit of fragrance clings to the hand that gives flowers!"
- */
+// thang2k6adu
+// FB: https://www.facebook.com/thang.936090
+// GitHub: https://github.com/thang2k6adu
+
 {
   "presets": ["@babel/preset-env"],
   "plugins": [
